--- a/DataProcessing/Styles/Text.xaml
+++ b/DataProcessing/Styles/Text.xaml
@@ -1,7 +1,35 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:sys="clr-namespace:System;assembly=mscorlib"
                     xmlns:local="clr-namespace:DataProcessing.Styles">
+    <FontFamily x:Key="FiraSans">/Fonts/#Fira Sans</FontFamily>
+    <FontFamily x:Key="FiraSansLight">/Fonts/#Fira Sans Light</FontFamily>
+    <FontFamily x:Key="FiraSansSemiBold">/Fonts/#Fira SemiBold</FontFamily>
+    <sys:Double x:Key="DefaultFontSize">14</sys:Double>
+    <sys:Double x:Key="BiggestFontSize">18</sys:Double>
+    <sys:Double x:Key="BiggerFontSize">16</sys:Double>
+    <sys:Double x:Key="SmallerFontSize">11</sys:Double>
+    
+    <Style x:Key="Header" TargetType="{x:Type TextBlock}">
+        <Setter Property="Foreground" Value="{StaticResource LabelColorBrush}" />
+        <Setter Property="FontSize" Value="{StaticResource BiggestFontSize}" />
+        <Setter Property="FontFamily" Value="{StaticResource FiraSans}" />
+        <Setter Property="FontWeight" Value="Bold" />
+    </Style>
+    
     <Style x:Key="LabelDefault" TargetType="{x:Type TextBlock}">
-        <Setter Property="Foreground" Value="{StaticResource ColorBrushGrayText}" />
+        <Setter Property="Foreground" Value="{StaticResource LabelColorBrush}" />
+        <Setter Property="FontSize" Value="{StaticResource DefaultFontSize}" />
+        <Setter Property="FontFamily" Value="{StaticResource FiraSans}" />
+    </Style>
+
+    <Style x:Key="LabelSmall" TargetType="{x:Type TextBlock}">
+        <Setter Property="Foreground" Value="{StaticResource LightLabelColorBrush}" />
+        <Setter Property="FontSize" Value="{StaticResource SmallerFontSize}" />
+        <Setter Property="FontFamily" Value="{StaticResource FiraSans}" />
+    </Style>
+    <Style x:Key="LabelSemiBold" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource LabelDefault}">
+        <Setter Property="FontFamily" Value="{StaticResource FiraSansSemiBold}" />
+        <Setter Property="FontWeight" Value="Bold" />
     </Style>
 </ResourceDictionary>
