--- a/DataProcessing/Styles/TextBoxStyle.xaml
+++ b/DataProcessing/Styles/TextBoxStyle.xaml
@@ -5,23 +5,28 @@
     <Style TargetType="{x:Type TextBox}">
         <Setter Property="Padding" Value="3 3 3 3" />
         <Setter Property="BorderThickness" Value="1" />
-        <Setter Property="BorderBrush" Value="{StaticResource LabelTextColorBrush}" />
+        <Setter Property="BorderBrush" Value="{StaticResource BlackColorBrush}" />
+        <Setter Property="FontSize" Value="{StaticResource DefaultFontSize}" />
+        <Setter Property="FontFamily" Value="{StaticResource FiraSans}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
                     <Grid>
-                        <Border Padding="{TemplateBinding Padding}"
+                        <Border 
+                            Padding="{TemplateBinding Padding}"
                             BorderThickness="{TemplateBinding BorderThickness}"
                             BorderBrush="{TemplateBinding BorderBrush}"
-                            CornerRadius="2">
+                            >
                             <ScrollViewer x:Name="PART_ContentHost" />
                         </Border>
-                        <Border x:Name="disableOverview" 
-                                Background="{StaticResource ColorBrushWhite}" 
-                                BorderBrush="{StaticResource ColorBrushWhite}"
-                                BorderThickness="1 1 1 1"
-                                Opacity="0.5" 
-                                Visibility="Collapsed" />
+                        <Border 
+                            x:Name="disableOverview" 
+                            Background="{StaticResource ColorBrushWhite}" 
+                            BorderBrush="{StaticResource ColorBrushWhite}"
+                            BorderThickness="1 1 1 1"
+                            Opacity="0.5" 
+                            Visibility="Collapsed" 
+                            />
                     </Grid>
 
                     <ControlTemplate.Triggers>
@@ -35,7 +40,28 @@
 
         <Style.Triggers>
             <Trigger Property="IsFocused" Value="True">
-                <Setter Property="BorderBrush" Value="{StaticResource ColorBrushCyan}" />
+                <Trigger.EnterActions>
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <ColorAnimation                         
+                                Storyboard.TargetProperty="BorderBrush.(SolidColorBrush.Color)"
+                                To="{StaticResource BlueColor}"
+                                Duration="0:0:0.2"
+                                />
+                        </Storyboard>
+                    </BeginStoryboard>
+                </Trigger.EnterActions>
+                <Trigger.ExitActions>
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <ColorAnimation                         
+                                Storyboard.TargetProperty="BorderBrush.(SolidColorBrush.Color)"
+                                To="{StaticResource BlackColor}"
+                                Duration="0:0:0.2"
+                                />
+                        </Storyboard>
+                    </BeginStoryboard>
+                </Trigger.ExitActions>
             </Trigger>
         </Style.Triggers>
     </Style>
@@ -47,19 +73,25 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
-                    <Border Padding="{TemplateBinding Padding}"
-                            BorderThickness="{TemplateBinding BorderThickness}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            CornerRadius="2">
+                    <Border 
+                        Padding="{TemplateBinding Padding}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        >
                         <Grid>
-                            <ScrollViewer x:Name="PART_ContentHost" />
-                            <Label x:Name="watermark" 
-                                   Content="{TemplateBinding Tag}" 
-                                   Visibility="Collapsed"
-                                   Foreground="{StaticResource ColorBrushGrayBorder}"
-                                   FontWeight="Bold"
-                                   Margin="3 3 3 3"
-                                   Padding="0" />
+                            <ScrollViewer 
+                                x:Name="PART_ContentHost" 
+                                VerticalAlignment="Center"
+                                />
+                            <Label 
+                                x:Name="watermark" 
+                                Content="{TemplateBinding Tag}" 
+                                Visibility="Hidden"
+                                Foreground="{StaticResource BlackColorBrush}"
+                                FontSize="{StaticResource DefaultFontSize}"
+                                FontFamily="{StaticResource FiraSansLight}"
+                                VerticalAlignment="Center"
+                                />
                         </Grid>
                     </Border>
 
