--- a/DataProcessing/Views/MainWindow.xaml
+++ b/DataProcessing/Views/MainWindow.xaml
@@ -9,7 +9,11 @@
         xmlns:converters="clr-namespace:DataProcessing.Converters"
         xmlns:usercontrols="clr-namespace:DataProcessing.UserControls"
         mc:Ignorable="d"
-        Title="Data Processing" Height="Auto" Width="Auto" WindowStartupLocation="CenterScreen">
+        Title="Data Processing" 
+        Height="Auto" 
+        Width="Auto" 
+        WindowStartupLocation="CenterScreen"
+        >
     
     <Window.Resources>
         <converters:BoolToVisibilityConverter x:Key="BoolToVisibility" />
@@ -22,7 +26,7 @@
             <Rectangle Fill="#ffffff"
                        Opacity="0.7" />
             <Border BorderThickness="0 0 0 3"
-                    BorderBrush="{StaticResource ColorBrushGreenButton}"
+                    BorderBrush="{StaticResource BlueColorBrush}"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     Padding="10">
@@ -30,15 +34,15 @@
                             VerticalAlignment="Center"
                             HorizontalAlignment="Center">
                     <usercontrols:LoadingControl Diameter="50"
-                                                 Color1="{StaticResource ColorGreenButton}"
-                                                 Color2="Transparent" />
+                                                 Color1="{StaticResource BlueColor}"
+                                                 Color2="{StaticResource DarkBlueColor}" />
                     <StackPanel Orientation="Horizontal">
-                        <Label Content="{Binding WorkLabel,FallbackValue=Working...}" 
-                               Foreground="{StaticResource ColorBrushGrayText}"
-                               FontSize="18" 
-                               FontWeight="Bold"
-                               VerticalAlignment="Center"
-                               Margin="5 0 0 0" />
+                        <TextBlock 
+                            Text="{Binding WorkLabel,FallbackValue=Working...}" 
+                            Style="{StaticResource Header}"
+                            VerticalAlignment="Center"
+                            Margin="6 0 0 0" 
+                            />
                     </StackPanel>
                 </StackPanel>
             </Border>
